Доработка аутентификации, файлового хранилища и работы с объектами